[package]
name = "data-flow-builder"
version = "1.0.0"
edition = "2021"

[dependencies]
control-flow-graph = { path = "../../Control Flow/Graph" }
control-flow-builder = { path = "../../Control Flow/Builder" }
control-flow-liveness = { path = "../../Control Flow/Liveness" }
data-flow-graph = { path = "../Graph" }

list.workspace = true
wasmparser.workspace = true
