[package]
name = "luau-printer"
version = "1.0.0"
edition = "2021"

[dependencies]
data-flow-graph = { path = "../../../Data Flow/Graph" }
data-flow-builder = { path = "../../../Data Flow/Builder" }
data-flow-visitor = { path = "../../../Data Flow/Visitor" }
luau-tree = { path = "../Tree" }
luau-builder = { path = "../Builder" }
clap = { version = "4.5.23", features = ["derive"] }
hashbrown = "0.15.2"
wasmparser = { version = "0.235.0", default-features = false, features = ["validate"] }

[[bin]]
name = "wasm2luau"
path = "src/main.rs"
